--- a/tcc/diversos/resumos.tex
+++ b/tcc/diversos/resumos.tex
@@ -1,7 +1,7 @@
 % resumo em português
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
-A sociedade tem cada vez mais se expressado através de Redes
+A sociedade tem cada vez mais expressado a sua opinião através de Redes
 Sociais, sendo que entre essas se destaca o
 Reddit. De fato, essa é uma das maiores redes sociais no mundo, com mais de 17
 milhões de usuários. Nesta, os usuários podem postar \textit{links}, bem como
@@ -14,10 +14,15 @@ ferramentas que podem apoiar decisões do ponto de vista político, econômico, 
 possível identificar a opinião dos usuários em relação a um candidato em uma eleição ou ainda a aceitação dos
 consumidores em relação a um novo produto.
 
-Assim, neste trabalho será desenvolvido um \textit{software} que permita efetuar
-a análise de sentimentos na rede social Reddit. Essa será desenvolvida
+Assim, neste trabalho foi desenvolvido um \textit{software} que permite efetuar
+a análise de sentimentos na rede social Reddit. Esse foi desenvolvido
 utilizando o método de \ac{VADER}, que se encontra implementado no
 \textit{framework} \ac{NLTK}.
+
+Além disso, utilizou-se o Método de Propagação Dupla, com a escolha de palavras
+alvos. A partir dessa implementação obteve-se uma assertividade de 59,17\% na
+avaliação de comentários de política e 72,54\% na avaliação de comentários sobre
+filmes.
 
 
  \textbf{Palavras-chaves}: Reddit. Processamento de Linguagem Natural. Análise de Sentimentos.
