--- a/tcc/diversos/resumos.tex
+++ b/tcc/diversos/resumos.tex
@@ -43,9 +43,14 @@ that can support decisions from an economic point of views, political
 point of view, etc. For an example, with that
 analysis, it is possible to identify the users's opinion regarding an election candidate or the costumers's acceptance of a new product.
 
-Therefore, in this work will be developed a software capable of performing a
-sentiment analysis on the Reddit social network. This will be developed using
+Therefore, in this work was developed a software capable of performing a
+sentiment analysis on the Reddit social network. This was developed using
 the \ac{VADER} method which is implemented by the \ac{NLTK} \textit{framework}.
+
+Furthermore, it was utilized the Double Propagation Method with the choosing of
+a target word. From that implementation we got a 59,17\% accuracy evaluating
+political commentaries and 72,54\% accuracy evaluating movie reviews
+commentaries. 
 
    \vspace{\onelineskip}
  
